fix wrap bugs

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -155,12 +155,19 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
+
+    &-img {
+      max-width: 580px;
+    }
 
     &-inf {
         display: flex;
+        max-width: 480px;
         flex-direction: column;
         justify-content: space-between;
         align-items: flex-start;
+        flex-wrap:wrap;
 
         .section-why-header{
             @include rubik-header2;
